<resources>
    <string name="app_name">Master1.2021.Hunault.Fil_Rouge</string>
    <string name="bouton_ajouter">AJOUTER</string>
    <string name="radio_basse">basse</string>
    <string name="radio_moyen">moyenne</string>
    <string name="radio_haute">haute</string>
    <string name="priorite">Priorité</string>
    <string name="menu_action_1">Ajouter une tâche</string>
    <string name="priorit">Priorité</string>
    <string name="t_ches">Tâches</string>
    <string name="entrer_votre_t_che">entrer votre tâche</string>
    <string name="pref_setting_1_key">clef_1</string>
    <string name="pref_setting_2_key">clef_2</string>
</resources>