<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/rouge"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".AddTaskActivity">

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrer_votre_t_che" />

    <TextView
        android:id="@+id/priorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priorite" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/boutonHaute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/rouge"/>

            <RadioButton
                android:id="@+id/boutonMoyen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/orange" />

            <RadioButton
                android:id="@+id/boutonBasse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/jaune" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/radio_haute"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/radio_moyen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/radio_basse" />
        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/boutonAjouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="on_click"
        android:text="@string/bouton_ajouter" />

</LinearLayout>